// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Component For Add Cart should take snapshot for add cart item 1`] = `
<div
  class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8 grid w-full grid-cols-1 items-start gap-y-8 gap-x-6 sm:grid-cols-12 lg:gap-x-8 my-10"
>
  <div
    class="aspect-w-2 aspect-h-3 overflow-hidden rounded-lg bg-gray-100 sm:col-span-2 lg:col-span-3"
  >
    <img
      alt="Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops"
      class="object-cover object-center"
      src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
    />
  </div>
  <div
    class="sm:col-span-10 lg:col-span-9 grid h-full"
  >
    <h2
      class="text-2xl font-bold text-gray-900 sm:pr-12"
    >
      Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
    </h2>
    <section
      aria-labelledby="information-heading"
      class="mt-2"
    >
      <h3
        id="information-heading"
      >
        Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded sleeve, your everyday
      </h3>
      <p
        class="text-2xl text-gray-900"
        data-testid="price"
      >
        ₹109.95
      </p>
      <div
        class="mt-6"
      >
        <h4
          class="sr-only"
        >
          Reviews
        </h4>
        <div
          class="flex items-center"
        >
          <div
            class="flex items-center"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900 text-gray-200"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <p
            class="sr-only"
          >
            3.9
             out of 5 stars
          </p>
          <a
            class="ml-3 text-sm font-medium text-indigo-600 hover:text-indigo-500"
            href="/"
          >
            120
             reviews
          </a>
        </div>
      </div>
    </section>
    <section
      aria-labelledby="options-heading"
      class="mt-4"
    >
      <button
        class="flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 py-3 px-8 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
        type="submit"
      >
        Add to bag
      </button>
    </section>
  </div>
</div>
`;

exports[`Product Component For Update Cart should render Update Product Component 1`] = `
<div
  class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8 grid w-full grid-cols-1 items-start gap-y-8 gap-x-6 sm:grid-cols-12 lg:gap-x-8 my-10"
>
  <div
    class="aspect-w-2 aspect-h-3 overflow-hidden rounded-lg bg-gray-100 sm:col-span-2 lg:col-span-3"
  >
    <img
      alt="Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops"
      class="object-cover object-center"
      src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
    />
  </div>
  <div
    class="sm:col-span-10 lg:col-span-9 grid h-full"
  >
    <h2
      class="text-2xl font-bold text-gray-900 sm:pr-12"
    >
      Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
    </h2>
    <section
      aria-labelledby="information-heading"
      class="mt-2"
    >
      <h3
        id="information-heading"
      >
        Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded sleeve, your everyday
      </h3>
      <p
        class="text-2xl text-gray-900"
        data-testid="price"
      >
        ₹109.95
      </p>
      <div
        class="mt-6"
      >
        <h4
          class="sr-only"
        >
          Reviews
        </h4>
        <div
          class="flex items-center"
        >
          <div
            class="flex items-center"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900 text-gray-200"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <p
            class="sr-only"
          >
            3.9
             out of 5 stars
          </p>
          <a
            class="ml-3 text-sm font-medium text-indigo-600 hover:text-indigo-500"
            href="/"
          >
            120
             reviews
          </a>
        </div>
      </div>
    </section>
    <section
      aria-labelledby="options-heading"
      class="mt-4"
    >
      <div
        class="flex items-center"
      >
        <button
          class="flex flex-1 w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 py-3 px-8 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 disabled:bg-slate-500 disabled:cursor-wait"
          type="submit"
        >
          +
        </button>
        <p
          class="flex-1 text-2xl font-bold text-center"
        >
          2
        </p>
        <button
          class="flex flex-1 w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 py-3 px-8 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2  disabled:bg-slate-500 disabled:cursor-wait"
          type="submit"
        >
          -
        </button>
      </div>
    </section>
  </div>
</div>
`;
